# PWRCord

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pr_test.yml  test_build.yml
pwrcord/: __init__.py
pwrcord/exceptions/: __init__.py  networking.py  validation.py
pwrcord/types/: __init__.py  activity.py  application.py  emoji.py  team.py  user.py
pwrcord/types/guild/: __init__.py  constants.py  integration.py  member.py  role.py  schedule.py  welcome_screen.py
pwrcord/types/typings/: __init__.py  api.py  internal.py
pwrcord/utils/: __init__.py  json.py
tests/utils/: conftest.py  test_json.py
